--- a/[Klasifikasi] Submission Akhir BMLP_Wildan Bagus Wicaksono.ipynb
+++ b/[Klasifikasi] Submission Akhir BMLP_Wildan Bagus Wicaksono.ipynb
@@ -5248,6 +5248,20 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Ketiga model menunjukkan kinerja yang sempurna, ditinjau dari beberapa matriks evaluasi seperti:\n",
+        "- accuracy, recall, precision, f1-score\n",
+        "- confusion matrix\n",
+        "- mean squared error\n",
+        "\n",
+        "Berdasarkan learning curve ketiganya tidak menunjukkan adanya overfitting atau underfitting."
+      ],
+      "metadata": {
+        "id": "0xEz7Vg17Iq6"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "## **e. Analisis Hasil Evaluasi Model Klasifikasi**"
       ],
       "metadata": {
